--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "second-project",
+  "name": "my-first-pet-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,25 +8,25 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fromarys/myfirstproject.git"
+    "url": "git+https://github.com/fromarys/fromarys.github.io.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fromarys/myfirstproject/issues"
+    "url": "https://github.com/fromarys/fromarys.github.io/issues"
   },
-  "homepage": "https://github.com/fromarys/myfirstproject#readme",
+  "homepage": "https://github.com/fromarys/fromarys.github.io/tree/master#readme",
   "devDependencies": {
     "browser-sync": "^2.26.14",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.2.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "sass": "^1.43.4"
-
   },
   "dependencies": {
     "gulp": "^4.0.2"
